[package]
name = "apstra-junos-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

